# svaeva-evaluation

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
.devcontainer/: README.md  devcontainer.json
assets/: network.html
data/plots/: sentence-transformers_msmarco-bert-base-dot-v5_sample_v4.html  togethercomputer_m2-bert-80M-2k-retrieval_sample_v4.html  togethercomputer_m2-bert-80M-32k-retrieval_sample_v4.html  togethercomputer_m2-bert-80M-8k-retrieval_sample_v4.html
notebooks/: client.ipynb  client_test.ipynb  gem.ipynb  remote_client.ipynb
svaeva_evaluation/: __init__.py  __main__.py  conversation.py  embeddings.py  network.py  server.py  utils.py
svaeva_evaluation/audio/: generate.py
svaeva_evaluation/messaging/: __init__.py
svaeva_evaluation/prompts/: consonancia.py
svaeva_evaluation/simulation/: chains.py  config.py  consonancia.py  consonancia_200.py  consonancia_test.py  generate_conversation_data.py  utils.py
svaeva_evaluation/visualization/: network.py  plotting.py
tests/test_example/: test_hello.py
